src/App.css
@keyframes fadein-initial {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0.5;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  75% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fillin {
  0% {
    transform: scale3d(1,0,1)
  }
  100% {
    transform: scale3d(1,1,1)
  }
}

.App svg *:focus {
  outline: none;
}

.italics {
  font-style: italic;
  white-space: nowrap;
}

.font-xxl {
  font-size: 50px;
}

.section {
  position: relative;
  padding: 0.5em 1em;
  margin: 0 0;
}

.section:first-child {
  margin-top: 0;
  padding-top: 1em;
}

.section:first-child::before {
  display: none;
}

.section.divider {
  margin-top: 2em;
}

.section.divider::before {
  content: ' ';
  position: absolute;
  display: inline-block;
  width: 80%;
  height: 3px;
  background-color: #712177;
  margin-left: calc(10% - 1em);
  top: -0.25em;
}

.column {
  display: inline-block;
  width: 50%;
  vertical-align: top;
}

.column-left {
  padding-right: 0.5em;
}

.column-right {
  padding-left: 0.5em;
}

input[type="radio"] {
  margin: 0 5px;
}

.subheader {
  display: block;
  color: #712177;
  font-size: 1.25em;
  font-weight: bold;
  font-family: "Merriweather", serif;
  margin: 0.5em 0;
}

.individual-header {
  font-weight: bold;
}

.subsection {
  margin-top: 1em;
  padding: 1em;
  position: relative;
}

.subsection.marked::before {
  content: '';
  position: absolute;
  top: 30;
  left: 0;
  width: 7px;
  height: 70px;
  background-color: #712177;
}

.no-padding {
  padding: 0;
}

.chart-legend {
  text-align: center;
}

.chart-legend span {
  margin: 0.5em;
}

.chart-legend.side strong {
  display: inline-block;
  margin-bottom: 0.5em;
}

.indicator {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  margin: 0.25em;
}

#metric-selectors {
  display: inline-block;
  border: 1px solid black;
  border-left: 7px solid #712177;
  padding: 0.75em;
}

#metric-selectors strong {
  margin: 0 1em;
}

#metric-selectors div {
  display: inline-block;
}

#metric-selectors label {
  margin-bottom: 0;
  margin-right: 1em;
}

.header {
  display: inline-block;
  width: 100%;
  background-color: #712177;
  color: white;
}

.header select {
  float: right;
  margin: .5em;
}

.header.margin {
  margin: 1em 0;
}

.preheader-label {
  display: inline-block;
  margin: .5em;
  font-size: 1.4em;
  font-family: sans-serif;
}

.header-section {
  display: inline-block;
  vertical-align: middle;
  width: calc(33% - 0.25em);
  border: 1px solid rgba(0,0,0,.125);
  border-left: 5px solid #b890bb;
  border-radius: .25rem;
  min-height: 100px;
  padding: .5em;
  transition: .25s box-shadow;
}

.header-section:hover {
  box-shadow: 0 5px 11px 0 rgb(0 0 0 / 18%), 0 4px 15px 0 rgb(0 0 0 / 15%);
}

.header-section.first .header-text .header-text {
  width: calc(100% - 150px);
}

.header-section.middle {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

.header-text {
  display: inline-block;
  width: calc(100% - 70px);
  vertical-align: middle;
  font-size: .85em;
}

.header-text.full {
  width: 100%;
  font-size: 1em;
}

.inline-header-text {
  display: inline-block;
  max-width: calc(100% - 9em);
  vertical-align: middle;
}

.inline-vertical-align {
  display: inline-block;
  height: calc(100px - 1em - 2px);
  vertical-align: middle;
}

.vertical-middle {
  vertical-align: middle;
}

.compare-buttons {
  margin-top: 1em;
  text-align: center;
}

.compare-buttons input {
  margin: 0.25em;
}

.compare-buttons input:first-child {
  margin-left: 1em;
}

.compare-buttons label:nth-child(2) {
  margin-right: 1em;
}

.enlarged {
  display: inline-block;
  vertical-align: middle;
  font-size: 2.5em;
  font-weight: 500;
  color: #712177;
  padding: 0 .1em;
  font-family: "Merriweather",serif;
}

.text-align-left {
  text-align: left;
}

.margin-top {
  margin-top: 1em;
}

.margin-bottom {
  display: inline-block;
  margin-bottom: 1em;
}

select {
  margin: 1em;
  font-size: medium;
  padding: 0.25em;
}

.scale-note {
  margin-top: 1em;
  font-size: small;
}

table caption {
  position: absolute;
  left: -1000px;
}

.toggle-indicator {
  float: right;
  margin: 0.5em;
  font-weight: bold;
}

.drug-tab-section {
  display: inline-block;
  width: 50%;
  margin-bottom: 0.5em;
}

.drug-tab {
  border: none;
  width: 46%;
  height: 60px;
  padding: 0.25em 0;
  margin: 0 2%;
  background: none;
  border-radius: 30px;
  box-shadow: 0px 2px 5px lightgrey;
  vertical-align: middle;
}

.drug-tab:hover {
  box-shadow: 0px 2px 7px gray;
}

.drug-tab.active {
  background-color: rgb(58, 88, 161);
  color: white;
}

.bar {
  outline: none;
}

.bar,
.bar-label,
.pie {
  transition: transform 1s ease-in-out;
}

#month-chart > svg > g {
  overflow:hidden;
}

#month-chart .visx-axis-bottom {
  background-color: #fff;
  z-index: 999;
}

.animated-bar {
  transform: scale(0, 1);
}

.animated-bar.vertical {
  transform: scale(1, 0);
}

.animated-bar.animated {
  transform: scale(1);
}

.fadein-initial {
  animation: fadein-initial 1s linear;
  opacity: 1;
}

.fadein {
  animation: fadein 1s ease;
  opacity: 1;
}

.opioid-section .waffle-label {
  color:rgb(58, 88, 161);
  font-weight: bold;
}

.opioid-section .column-left {
  width: 33%;
  margin-right: 2em;
}

.opioid-section .column-right {
  width: calc(66% - 2em);
}

.App.medium-vp .column,
.App.accessible .opioid-section .column {
  display: block;
  width: 100%;
  padding: 0;
}

.App.medium-vp .column-left {
  padding-right: 0;
}

.App.medium-vp .column-right {
  padding-left: 0;
}

.App.medium-vp .header-section {
  display: block;
  width: 100%;
}

.App.medium-vp .margin-top-small-viewport {
  margin-top: 1em;
}

.App.medium-vp .header-section.middle {
  margin-left: 0;
  margin-right: 0;
}

.App.medium-vp .drug-tab-section {
  display: block;
  width: 100%;
}

.App.accessible .chart-container {
  height: auto !important;
}

.App.accessible .subsection {
  padding: 0;
}

.App.accessible .individual-header {
  margin-left: 1em;
}

.animated-pie text {
  transform:translateX(0);
}

.tooltip,
.animated-pie path,
.animated-pie text {
  transition: all .4s ease-in-out;
  border: rgba(0,0,0,.3) 1px solid !important;
  box-shadow: rgba(0,0,0,.1) 3px 3px 7px;
  opacity: 1;
  line-height: 1.4em;
  font-size: 1em;
  border-radius: 4px;
  padding: 8px 12px;
}

.animated-pie-intro {
  transform: scale(0, 0);
}

.animated-pie-intro.animated {
  transform: scale(1, 1);
}

.animated-pie .animated-pie-text {
  opacity: 0;
  transition: opacity .5s ease-in-out;
  transition-delay: .4s;
}

.animated-pie .animated-pie-text.animated {
  opacity: 1;
}

#map-container path {
  transition: all .3s ease-in-out;
}

#map-container path.hex-tile {
  opacity: .9;
}

#map-container path.faded {
  opacity: .4;
}

#map-container path.data-available {
  cursor: pointer;
}

#map-container path.data-available:hover {
  opacity: 1;
}

